# rust-rocket-restapi

./: .gitignore  Cargo.toml  DockerFile  Rocket.toml  readme.md  requirement.txt
migrations/2023-08-28-132544_create_posts/: up.sql
src/: controller.rs  database.rs  main.rs  middleware.rs  models.rs
